# observability-learning

./: .env.example  .gitignore  DESIGN.md  README.md  compose.yaml
app/: .dockerignore  Dockerfile  granian-log.json  pyproject.toml
app/src/observability_demo/: __init__.py  logging.py  main.py  metrics.py  middleware.py  routes.py  settings.py  tracing.py
app/tests/: query_logs.py  smoke_distribution.py  smoke_grafana.py  smoke_logs.py  smoke_metrics.py  smoke_traces.py  test_main.py
docs/: STEP_1_IMPLEMENTATION_PLAN.md  STEP_2_IMPLEMENTATION_PLAN.md  STEP_3_IMPLEMENTATION_PLAN.md  STEP_4_IMPLEMENTATION_PLAN.md  STEP_5_IMPLEMENTATION_PLAN.md  STEP_6_IMPLEMENTATION_PLAN.md
observability/alloy/: config.alloy
observability/blackbox/: config.yaml
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/dashboards/json/: observability-demo-service.json
observability/grafana/provisioning/datasources/: datasources.yaml
observability/loki/: config.yaml
observability/otel-collector/: config.yaml
observability/prometheus/: prometheus.yaml
observability/prometheus/rules/: api_red.yaml
observability/prometheus/tests/: api_red_test.yaml
observability/tempo/: tempo.yaml
observability/traefik/: traefik.yaml
